dir-test/tests/fixtures/fail/invalid_path.stderr
error: `../foo` is not an absolute path
 --> tests/fixtures/fail/invalid_path.rs:4:10
  |
4 |     dir: "../foo/"
  |          ^^^^^^^^^

error: `/__NONE__` does not exist
 --> tests/fixtures/fail/invalid_path.rs:9:10
  |
9 |     dir: "/__NONE__"
  |          ^^^^^^^^^^^
